# pharma-regulatory-clinical-intelligence-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PROJECT_INSTRUCTION.md  PROJECT_STATE.md  PROJECT_STATE_CONTINUATION.md  README.md  project_instruction.md  pyproject.toml
.ai/: PROJECT_STATE.md
docs/: claude_code_web_mcp_smoke_test_note.md  claude_project_validation_workflow.md  clinical_trial_query_metadata_consistency_smoke_example.md  cmc_submission_readiness_input_template.md  cmc_submission_readiness_mapping_workflow.md  cmc_submission_readiness_mock_inventory.md  dashboard_data_schema_contract.md  dashboard_query_filter_contract.md  dashboard_target_architecture.md  data_dictionary.md  live_source_behavior_notes.md  mcp_tool_contract.md  mcp_usage_examples.md  mock_dashboard_record_examples.md  mvp_live_acceptance_validation_results_template.md  mvp_live_acceptance_validation_runbook.md  mvp_v1_completion_note.md  offline_smoke_example_conventions.md  open_source_claude_codex_tool_survey.md  original_requirements_traceability_matrix.md  post_mvp_source_expansion_decision_matrix.md  product_modality_regulatory_search_smoke_example.md  product_modality_taxonomy.md  product_value_usability_calibration.md  query_metadata_consistency_smoke_example.md  regulatory_clinical_digest_clean_source_dry_run.md  regulatory_clinical_digest_example_memo.md  regulatory_clinical_digest_memo_validation_exercise.md  regulatory_clinical_digest_prompt_pack.md  regulatory_clinical_digest_report_template_contract.md  regulatory_clinical_digest_report_workflow.md  (+10 more)
(+85 files in other folders)
