[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-regulatory-clinical-intelligence-mcp"
version = "0.1.1"
description = "MVP v1 skeleton for pharmaceutical regulatory and clinical intelligence MCP"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0",
  "mcp[cli]>=1.0.0,<2.0.0"
]

[project.scripts]
pharma-rci-mcp = "src.mcp_server.stdio_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
